k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: meu-app
  namespace: ak8s-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: meu-app
  type: ClusterIP
status:
  loadBalancer: {}
